--- a/src/main/resources/templates/Courseform.html
+++ b/src/main/resources/templates/Courseform.html
@@ -5,24 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-<form action="#" th:action="@{/process}"
+<form action="#"
+      th:action="@{/process}"
       th:object="${course}"
       method="post">
-    <input type="hidden" th:field="*{id}" />
-    Title :<input type="hidden" th:field="*{title}" />
+    Title :<input type="text" th:field="*{title}" />
     <span th:if="${#fields.hasErrors('title')}"
-          th:errors="*{title}"></span><br/>
-    Instructor :<input type="hidden" th:field="*{instructor}" />
+          th:errors="*{name}"></span><br />
+    Instructor :<input type="text" th:field="*{instructor}" />
     <span th:if="${#fields.hasErrors('instructor')}"
-          th:errors="*{instructor}"></span><br/>
+          th:errors="*{instructor}"></span><br />
     Description :<textarea rows="3" th:field="*{description}" />
     <span th:if="${#fields.hasErrors('description')}"
-          th:errors="*{description}"></span><br/>
-    Credit :<input type="text" th:field="*{credit}" />
+          th:errors="*{description}"></span>
+    Credits :<input type="text" th:field="*{credit}" />
     <span th:if="${#fields.hasErrors('credit')}"
-          th:errors="*{credit}"></span><br/>
+          th:errors="*{credit}"></span><br />
+    <br />
     <input type="submit" value="Submit" />
-
 </form>
 </body>
 </html>
