--- a/src/main/resources/templates/List.html
+++ b/src/main/resources/templates/List.html
@@ -18,7 +18,7 @@
         <td th:text="${course.instructor}"></td>
         <td th:text="${course.credit}"></td>
         <td>
-            <a th:href="@{/detail/{id}(id=${course.id})}">Update</a> -
+            <a th:href="@{/Update/{id}(id=${course.id})}">Update</a> -
             <a th:href="@{/detail/{id}(id=${course.id})}">Details</a> -
             <a th:href="@{/delete/{id}(id=${course.id})}">Delete</a>
         </td>
